@@ -1,4 +1,14 @@
+FROM gradle:4.7.0-jdk8-alpine AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon 
+
 FROM amazoncorretto:11-alpine-jdk
-MAINTAINER corruptzero
-COPY build/libs/y2vid-0.0.1-SNAPSHOT.jar y2vid-1.0.0.jar
-ENTRYPOINT ["java","-jar","/y2vid-1.0.0.jar"]
+
+EXPOSE 8080
+
+RUN mkdir /app
+
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
